// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressTable should render 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <h2
      class="py-5 text-2xl font-bold"
    >
      Select Address
    </h2>
    <div
      class="sc-AxirZ foACTB"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Address
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end"
              >
                <div>
                  Balance
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Delegate
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Rank
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Profile
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--8"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--9"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="sc-AxhCb cokDuf group"
            data-testid="TableRow"
          >
            <td
              class="w-1"
            >
              <div
                class="sc-AxiKw gtaXRk"
              >
                <div
                  class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK mr-4"
                  data-testid="Avatar"
                >
                  <div
                    class="w-full h-full"
                  >
                    <img
                      alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                      src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                      title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="w-20"
            >
              <div
                class="sc-AxiKw cNDILm"
              >
                <div
                  class="inline-block truncate align-middle"
                >
                  <span
                    class="text-theme-text max-w-24 flex-auto truncate mt-4 mr-1 font-semibold text-base"
                    data-testid="address__wallet-name"
                  >
                    ARK Wallet 1
                  </span>
                  <span
                    class="sc-AxhUy kMyssT text-theme-neutral-light font-semibold text-base"
                    data-testid="address__wallet-address"
                  >
                    D8rr7B1d6…VBMs6YUYD
                  </span>
                </div>
              </div>
            </td>
            <td
              class="w-20"
            >
              <div
                class="sc-AxiKw cNDILm justify-center text-sm font-bold"
              >
                <div
                  class="inline-flex items-center space-x-2"
                >
                  <span
                    class="text-theme-neutral-600"
                  >
                    <div
                      class="sc-AxjAm vZRQY"
                      height="16"
                      width="16"
                    >
                      <svg>
                        multisig.svg
                      </svg>
                    </div>
                  </span>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw cNDILm justify-end font-bold text-theme-neutral-dark"
              >
                <span
                  data-testid="Amount"
                >
                  33.75089801 DARK
                </span>
              </div>
            </td>
            <td
              class="w-24"
            >
              <div
                class="sc-AxiKw cNDILm justify-end"
              >
                <div
                  class="mr-4"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 hIrkRK"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw cNDILm font-bold"
              >
                <span>
                  arkx
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw cNDILm justify-center font-bold text-theme-neutral-dark"
              >
                <span>
                  #
                </span>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw cNDILm justify-center"
              >
                <div
                  class="sc-AxjAm cpczEI text-xl text-theme-primary"
                  data-testid="AddressRow__profile"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    msq.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw cNDILm justify-center"
              >
                <div
                  class="sc-AxjAm cpczEI text-theme-success"
                  data-testid="AddressRow__status"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    ok.svg
                  </svg>
                </div>
              </div>
            </td>
            <td>
              <div
                class="sc-AxiKw bQCFMo justify-end"
              >
                <button
                  class="sc-AxgMl jTfhed"
                  color="primary"
                  data-testid="AddressRow__select-0"
                  type="button"
                >
                  Select
                </button>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AddressTable should render with empty list 1`] = `
<DocumentFragment>
  <div
    data-testid="AddressTable"
  >
    <h2
      class="py-5 text-2xl font-bold"
    >
      Select Address
    </h2>
    <div
      class="sc-AxirZ foACTB"
      role="table"
    >
      <table
        cellpadding="0"
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--1"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Address
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--2"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--3"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-end"
              >
                <div>
                  Balance
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--4"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top hidden"
              >
                <div>
                   
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--5"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                  Delegate
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--6"
              role="columnheader"
              style="cursor: pointer;"
              title="Toggle SortBy"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Rank
                </div>
                <div
                  class="flex items-center ml-2 text-theme-color-neutral"
                  data-testid="table__Sort"
                >
                  <div
                    class="sc-AxjAm hdgaLj"
                    height="12"
                    width="15"
                  >
                    <svg>
                      sort.svg
                    </svg>
                  </div>
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--7"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Profile
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--8"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top justify-center"
              >
                <div>
                  Status
                </div>
              </div>
            </th>
            <th
              class="text-sm text-left select-none text-theme-neutral"
              colspan="1"
              data-testid="table__th--9"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top "
              >
                <div>
                   
                </div>
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b border-dotted last:border-b-0 border-theme-neutral-300"
            data-testid="AddressRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="flex justify-end h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 mr-5 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 50px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 30px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted last:border-b-0 border-theme-neutral-300"
            data-testid="AddressRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="flex justify-end h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 mr-5 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 50px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 30px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted last:border-b-0 border-theme-neutral-300"
            data-testid="AddressRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="flex justify-end h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 mr-5 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 50px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 30px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted last:border-b-0 border-theme-neutral-300"
            data-testid="AddressRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="flex justify-end h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 mr-5 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 50px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 30px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted last:border-b-0 border-theme-neutral-300"
            data-testid="AddressRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="flex justify-end h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 mr-5 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 50px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 30px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted last:border-b-0 border-theme-neutral-300"
            data-testid="AddressRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="flex justify-end h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 mr-5 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 50px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 30px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted last:border-b-0 border-theme-neutral-300"
            data-testid="AddressRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="flex justify-end h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 mr-5 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 50px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 30px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="border-b border-dotted last:border-b-0 border-theme-neutral-300"
            data-testid="AddressRowSkeleton"
          >
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="w-20 py-5"
            />
            <td
              class="py-5"
            >
              <div
                class="flex justify-end h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 mr-5 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 50px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="sc-AxheI gXqoin bg-theme-neutral-200 border-theme-neutral-200"
              />
            </td>
            <td
              class="py-5"
            >
              <span>
                <span
                  class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                  style="width: 80%; height: 6px;"
                >
                  ‌
                </span>
              </span>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 30px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 24px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="flex justify-center h-full"
              >
                <span>
                  <span
                    class="react-loading-skeleton mt-4 css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 24px; height: 6px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
            <td
              class="py-5"
            >
              <div
                class="text-right"
              >
                <span>
                  <span
                    class="react-loading-skeleton css-1vmnjpn-skeletonStyles-Skeleton"
                    style="width: 100px; height: 40px;"
                  >
                    ‌
                  </span>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
